# chronos

./: .env  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile.chronos  Dockerfile.chronos-pg-migrations  How-to.md  Makefile  README.md  docker-compose.yml  env.example  otel-collector-config.yaml
.github/workflows/: build.yml  chronos-publish.yml  deploy.yml  publish.yml  release-db-migration.yml  release.yml  rust_build.yml
benches/: consumer_bench.rs
chronos_bin/: Cargo.toml
chronos_bin/src/: core.rs  lib.rs  message_processor.rs  message_receiver.rs  monitor.rs  persistence_store.rs  runner.rs
chronos_bin/src/kafka/: config.rs  consumer.rs  errors.rs  kafka_deploy.rs  mod.rs  producer.rs  utils.rs
chronos_bin/src/postgres/: config.rs  errors.rs  mod.rs  pg.rs  pg_deploy.rs
chronos_bin/src/telemetry/: jaegar_backend.rs  mod.rs  otlp_collector.rs  register_telemetry.rs
chronos_bin/src/utils/: config.rs  delay_controller.rs  mod.rs  util.rs
examples/: chronos_binary.rs  consumer_example.rs  main_Threaded_producer.rs  main_base_producer.rs  main_reqwest.rs  producer_example.rs
examples/chronos_bin/: Cargo.toml
examples/chronos_bin/examples/: chronos_binary.rs
examples/chronos_ex/: Cargo.toml
examples/chronos_ex/examples/: chronos_ex.rs  opentelemetry.rs  pg_create_database.rs  stdout_example.rs  telemetry_async_simple.rs  telemetry_simple.rs  tracing_example.rs
infra/: otelcol-config.yml
migrations/: Cargo.toml
migrations/migrations/: V2__index.sql
pg_mig/: Cargo.toml
pg_mig/migrations/: V1__initial.sql
pg_mig/src/: config.rs
scripts/: pre-commit-checks.sh
src/: consumer.rs  core.rs  kafka_client.rs  layover.rs  lib.rs  main.rs  main1.rs  main2.rs  main_channels.rs  main_pg.rs  message_processor.rs  message_receiver.rs  message_reciever.rs  monitor.rs  pg_client.rs  producer.rs  runner.rs  runner1.rs  scruitiny.rs  utils.rs
src/bin1/: main2.rs  main_pg.rs
src/kafka/: config.rs  kafka_deploy.rs  mod.rs  producer.rs
src/postgres/: pg.rs
