# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver="2"
members = [
    # chronos binary
    "chronos_bin",
    # examples
    "examples/*",
    # migrations binary
    "pg_mig"
]

[workspace.dependencies]

# [dependencies]
#logging
env_logger = "0.10.0"
log = { version = "0.4", features = [  "kv_unstable",    "std",    "kv_unstable_serde" ] }

#Exception handling
anyhow = "1.0.69"

#async
futures="0.3.26"
async-trait = "0.1.66"
tokio = { version = "1", features = ["full"] }

#data parsing
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

tokio-postgres = {version="0.7.7", features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
rdkafka = { version = "0.29.0", features = ["sasl"] }
clap = { version = "4.1.4", features = ["derive"] }
chrono = "0.4.23"
uuid = { version="1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
dotenvy = "0.15"
clippy = "0.0.302"
deadpool-postgres = "0.10"
refinery = { version = "0.8.7", features = ["tokio-postgres"] }
thiserror = "1.0.31"
rand = "0.8.5"
serial_test = "2.0.0"


