# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver="2"
members = [
    # chronos binary
    "chronos_bin",
    # examples
    "examples/*",
    # migrations binary
    "pg_mig"
]

[workspace.dependencies]

#async
futures="0.3.26"
async-trait = "0.1.66"
tokio = { version = "1", features = ["full"] }


#db
tokio-postgres = {version="0.7.7", features=["with-chrono-0_4","with-serde_json-1","with-uuid-1"]  }
deadpool-postgres = "0.10"
refinery = { version = "0.8.7", features = ["tokio-postgres"] }


clippy = "0.0.302"
rand = "0.8.5"
serial_test = "2.0.0"


