[package]
name = "chronos_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#logging
env_logger = "0.10.0"
log = { version = "0.4", features = [  "kv_unstable",    "std",    "kv_unstable_serde" ] }


#tokio and async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

#postgres
tokio-postgres.workspace = true
deadpool-postgres.workspace = true

#migration 
refinery.workspace = true

#data parsing
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

#kafka
rdkafka = { version = "0.34.0", features = ["sasl"] }

#exception-handling
thiserror = "1.0.31"
anyhow = "1.0.42"

#time
chrono = "0.4.23"

#config
clippy.workspace = true
clap = { version="4.1.4", features = ["derive"] }
dotenvy = "0.15"
uuid = { version="1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

#random
rand.workspace = true
openssl = "0.10.57"

[dev-dependencies]
serial_test.workspace = true


[dev-dependencies.cargo-husky]
version = "1"
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]
