[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# tokio and async
tokio = { workspace = true }
async-trait = { workspace = true }

# postgres
tokio-postgres = { workspace = true }

# Migration
refinery = { workspace=true }

# chronos= { path="../packages/chronos_bin" }
