[package]
name = "pg_mig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#tokio and async
tokio.workspace = true
async-trait.workspace = true

#postgres
tokio-postgres.workspace = true

refinery.workspace=true

[dev-dependencies.cargo-husky]
version = "1"
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]